fix according to Maria's comment: There should be 8 px of spacing between the buttons.

--- a/dashboards-ui/dashboardsui-web/public_html/css/dashboards-home-alta.css
+++ b/dashboards-ui/dashboardsui-web/public_html/css/dashboards-home-alta.css
@@ -261,6 +261,8 @@ ul.dbs-summary-rows li {
 
 #dtabhomettb #cbtn{
     margin-bottom: 4px; 
+    margin-left: 8px;
+    margin-right: 8px;
     background-image: none;
     //margin-left: 6px;
     text-shadow: none;
